Fix header alignment with flex box align items and justify content

--- a/mainCSS.css
+++ b/mainCSS.css
@@ -7,6 +7,13 @@ body {
 .header,
 .footer {
     background: #1F2937;
+    display: flex;
+    align-items: center;
+}
+
+.header {
+    justify-content: space-between;
+    padding: 0 4em;
 }
 
 .logo {
